test/spec_vectors/simd_bit_shift/fail/module_35.wat
(module (func $i32x4.shr_s-1st-arg-empty (result v128) (i32x4.shr_s (i32.const 0))))